# AKARI-HANDOREMI

./: README.md  camera.py  create_sounds.py  hand_detect.py  main.py  memo.md  pyproject.toml  requirements.txt  sound.py
json/: best.json
