[project]
name = "akari-handoremi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akari-client>=0.4.4",
    "blobconverter>=1.4.3",
    "depthai==2.30",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
]
